configured to use released BOM from maven central